--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "csurf": "^1.11.0",
+    "ioredis": "^5.2.2",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
