--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.4",
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "csurf": "^1.11.0",
+    "framer-motion": "^6.5.1",
     "ioredis": "^5.2.2",
     "next": "12.2.3",
     "react": "18.2.0",
