--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "csurf": "^1.11.0",
+    "express": "^4.18.1",
     "framer-motion": "^6.5.1",
     "ioredis": "^5.2.2",
     "next": "12.2.3",
