--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "framer-motion": "^6.5.1",
     "ioredis": "^5.2.2",
+    "iron-session": "^6.1.3",
     "next": "12.2.3",
     "next-themes": "^0.2.0",
     "react": "18.2.0",
