--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "framer-motion": "^6.5.1",
     "ioredis": "^5.2.2",
     "iron-session": "^6.1.3",
+    "lodash": "^4.17.21",
+    "mitt": "^3.0.0",
     "next": "12.2.3",
     "next-themes": "^0.2.0",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
