--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next-themes": "^0.2.0",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.20.0",
