--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "status-page",
-  "version": "0.0.5",
+  "version": "0.0.8",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -26,6 +26,7 @@
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
