--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "framer-motion": "^6.5.1",
+    "got": "^11.8.5",
     "ioredis": "^5.2.2",
     "iron-session": "^6.1.3",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "next": "12.2.3",
     "next-themes": "^0.2.0",
+    "node-cron": "^3.0.1",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
