--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "async": "^3.2.4",
     "csurf": "^1.11.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
