--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "async": "^3.2.4",
+    "axios": "^0.27.2",
     "csurf": "^1.11.0",
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "framer-motion": "^6.5.1",
