--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "v2-status-page",
-  "version": "0.1.0",
-  "private": true,
+  "name": "hunter-wilson-status",
+  "version": "0.0.9",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,12 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "eslint-config-next": "13.5.6",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.4"
   }
 }
