--- a/public/urls.cfg
+++ b/public/urls.cfg
@@ -1,8 +1,7 @@
 Website=https://hunterwilson.dev
-Mail=https://mail.theteacup.dev/SOGo/
+Mail=https://mail.theteacup.dev/SOGo
 File Server=https://files.theteacup.dev
 Bin=https://bin.hunterwilson.dev
 Hosting=https://panel.theteacup.dev
 Image Server=https://ss.theteacup.dev
 Links=https://links.hunterwilson.dev
-
