--- a/public/urls.cfg
+++ b/public/urls.cfg
@@ -5,3 +5,4 @@ Bin=https://bin.hunterwilson.dev
 Hosting=https://panel.theteacup.dev
 Image Server=https://ss.theteacup.dev
 Links=https://links.hunterwilson.dev
+Analytics=https://analytics.theteacup.dev
